--- a/.gitconfig
+++ b/.gitconfig
@@ -15,6 +15,17 @@
   amend = commit --amend
   cim = commit -m
   ciam = commit -am
+	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue)<%an>%Creset' --abbrev-commit
 
 [mergetool]
   keepBackup = true
+[push]
+	default = current
+[core]
+	excludesfile = /Users/dlikhten/.gitignore_global
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
